# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  ruff.toml
labels/: forms.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: forms.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: label_confirm_delete.html  label_form.html
task_manager/statuses/: forms.py  models.py  urls.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: status_confirm_delete.html
task_manager/tasks/: filters.py  forms.py  models.py  urls.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: label_list.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: status_form.html  status_list.html
task_manager/templates/tasks/: task_form.html  task_list.html
task_manager/templates/users/: user_confirm_delete.html  user_form.html
task_manager/users/: urls.py  views.py
tasks/: filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_list.html
users/: forms.py  tests.py  urls.py  views.py
users/templates/users/: user_confirm_delete.html  user_form.html  user_list.html
(+2 files in other folders)
