[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-bootstrap5>=25.2",
    "django-filter>=25.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
]
